--- a/src/static/scss/index.scss
+++ b/src/static/scss/index.scss
@@ -98,11 +98,15 @@
   }
   .sub-t-btn{
     position: absolute;
-    width: 40px;
-    height: 40px;
+    padding: 0 8px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-size: 12px;
+    color: #fff;
     border-radius: 5px;
     background: $red;
-    top: 10px;
+    top: 5px;
     right: 10px;
     cursor: pointer;
     display: none;
