--- a/src/static/variables.scss
+++ b/src/static/variables.scss
@@ -1,10 +1,12 @@
 $red: #7a181b;
 $grayRed: #e5d1d1;
-$midDark: #46464c;
+$midDark: #48464d;
 $dark: #363338;
 $gray: #8d8d9e;
 $midgray: #6b6b7e;
 $grayWhite: #a5a5b3;
+$grayBold: #d7dae3;
+$backGray: #f3f5fa;
 
 $tinyGray: #b0b0b0;
 $tinyWhite: #e7e7e7;
