--- a/src/static/scss/common.scss
+++ b/src/static/scss/common.scss
@@ -62,6 +62,56 @@ img.cover{
   }
 }
 
+.tag-common{
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border: {
+    width: 7px;
+    style: solid;
+    color: transparent transparent transparent $grayBold;
+  }
+  transform-origin: 0 0;
+}
+.tag-deco-up{
+  position: relative;
+  &:before{
+    @extend .tag-common;
+    left: -10px;
+    top: 0;
+    transform: rotate(-45deg);
+  }
+  &:after{
+    @extend .tag-common;
+    border: {
+      color: transparent $grayBold transparent  transparent;
+    }
+    right: -14px;
+    top: -10px;
+    transform: rotate(45deg);
+  }
+}
+.tag-deco-down{
+  position: relative;
+
+  &:before{
+    @extend .tag-common;
+    left: 0;
+    bottom: -4px;
+    transform: rotate(45deg);
+  }
+  &:after{
+    @extend .tag-common;
+    border: {
+      color: transparent $grayBold transparent transparent;
+    }
+    right: -4px;
+    bottom: -14px;
+    transform: rotate(-45deg);
+  }
+}
+
 /* page-box */
 .page-box{
   width: 1160px;
@@ -263,5 +313,33 @@ img.cover{
   }
   .td-trow{
     height: 80px;
+  }
+  .th-gray{
+    th{
+      border: 1px solid $tinyWhite;
+      background-color: #fff;
+      color: $dark;
+    }
+  }
+}
+.table-sch{
+  @extend .table;
+  font-size: 16px;
+  td{
+    height: 45px;
+    padding: 0;
+    color: $midgray;
+  }
+  th{
+    padding: 0;
+    height: 40px;
+    color: $midDark;
+  }
+  .th-sub{
+    td{
+      height: 40px;
+      color: $midDark;
+      font-weight: 600;
+    }
   }
 }
