--- a/src/static/scss/school-rep.scss
+++ b/src/static/scss/school-rep.scss
@@ -1,7 +1,5 @@
 @import '../variables.scss';
 
-@import 'cover.scss';
-@import 'catalog.scss';
 @import 'introduction.scss';
-@import 'score.scss';
+@import 'school.scss';
 @import 'index-m.scss';
