--- a/src/static/scss/school.scss
+++ b/src/static/scss/school.scss
@@ -256,6 +256,10 @@
 }
 
 /* page-three */
+.items-charts{
+  width: 980px;
+  margin: 0 auto;
+}
 .score-tables{
   padding: 0 31px 25px;
   border: 1px solid $tinyWhite;
