--- a/src/static/scss/school.scss
+++ b/src/static/scss/school.scss
@@ -140,6 +140,11 @@
       display: block;
       position: absolute;
     }
+    .ruler-mk{
+      display: block;
+      position: relative;
+      margin: 0 21px 0 17px;
+    }
     .ruler-mark{
       height: 20px;
       border-left: 2px solid #cc7577;
