--- a/src/static/scss/common.scss
+++ b/src/static/scss/common.scss
@@ -291,24 +291,24 @@ img.cover{
 
   th{
     padding: 10px;
-    line-height: 20px;
     background-color: $red;
     color: #fff;
   }
   td{
-    padding: 10px;
-    line-height: 20px;
+    padding: 0 10px;
+    height: 40px;
     border: 1px solid $tinyWhite;
     color: $midgray;
   }
   td[rowspan="2"]{
-    height: 60px;
+    height: 60px!important;
   }
   .th-sub{
     td{
       color: $dark;
+      height: 30px;
       font-size: 13px;
-      padding: 5px;
+      padding: 0 5px;
     }
   }
   .td-trow{
@@ -319,6 +319,43 @@ img.cover{
       border: 1px solid $tinyWhite;
       background-color: #fff;
       color: $dark;
+    }
+  }
+
+  &.table-rows-8{
+    td{
+      height: 36px;
+    }
+  }
+  &.table-rows-10{
+    td{
+      height: 32px;
+    }
+  }
+
+  &.table-justy{
+    td{
+      height: 80px;
+    }
+  }
+  &.table-justy-7{
+    td{
+      height: 93.33px;
+    }
+  }
+  &.table-justy-8{
+    td{
+      height: 96px;
+    }
+  }
+  &.table-justy-9{
+    td{
+      height: 108px;
+    }
+  }
+  &.table-justy-10{
+    td{
+      height: 106.66px;
     }
   }
 }
