--- a/src/static/scss/score.scss
+++ b/src/static/scss/score.scss
@@ -1,7 +1,7 @@
 @import '../variables.scss';
 
 .score-box{
-  padding: 20px 80px;
+  padding: 20px 80px 40px;
   overflow: hidden;
 }
 
@@ -276,11 +276,11 @@
 }
 
 .sitem-cont{
-  margin: 20px 0;
+  margin: 15px 0;
 
   .cont-title{
     color: $midgray;
-    height: 40px;
+    height: 30px;
   }
 
   .sitem-tables{
@@ -289,7 +289,7 @@
       float: left;
 
       &:first-child{
-        margin-right: 20px;
+        margin-right: 19px;
         width: 582px;
       }
       &:last-child{
