--- a/src/static/scss/score.scss
+++ b/src/static/scss/score.scss
@@ -5,11 +5,45 @@
   overflow: hidden;
 }
 
+.score-overview{
+  .page-head{
+    border: 0;
+  }
+}
 .page-user-info{
-  height: 125px;
-  background: $red;
-  padding: 15px 30px;
   color: #fff;
+
+  .user-avatar{
+    float: right;
+    width: 113px;
+    height: 150px;
+    overflow: hidden;
+
+    img{
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .user-main{
+    padding: 15px 30px;
+    background: $red;
+    margin-right: 133px;
+    position: relative;
+    &:after{
+      content: "";
+      display: block;
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 50%;
+      right: 0;
+      margin-top: -12px;
+      border-width: 12px;
+      border-style: solid;
+      border-color: transparent #fff transparent transparent;
+    }
+  }
 
   .info-title{
     font-size: 16px;
@@ -19,26 +53,23 @@
   }
 
   .info-list{
-    font-size: 0;
+    overflow: hidden;
 
     li{
-      display: inline-block;
-      vertical-align: bottom;
+      float: left;
+      width: 50%;
       font-size: 18px;
       height: 30px;
       line-height: 30px;
-    }
-    li:nth-of-type(1){
-      width: 250px;
-    }
-    li:nth-of-type(2){
-      width: 400px;
+      padding-right: 10px;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
 }
 
 .user-score{
-  margin-top: 15px;
+  margin-top: 10px;
 }
 .score-cont{
   height: 126px;
