--- a/src/static/scss/score.scss
+++ b/src/static/scss/score.scss
@@ -57,13 +57,22 @@
 
     li{
       float: left;
-      width: 50%;
-      font-size: 18px;
+      width: 40%;
+      font-size: 17px;
       height: 30px;
       line-height: 30px;
       padding-right: 10px;
       overflow: hidden;
       white-space: nowrap;
+
+      &:nth-of-type(odd){
+        width: 60%;
+      }
+
+      span{
+        display: block;
+        overflow: hidden;
+      }
     }
   }
 }
