--- a/src/static/scss/school.scss
+++ b/src/static/scss/school.scss
@@ -315,3 +315,28 @@
 .items-echart-bar-h{
   height: 365px;
 }
+
+// page-report
+.page-report-title{
+  padding: 30px 0;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+}
+.report-table{
+  
+  .td-tit{
+    td{
+      background: $red;
+      color: #fff;
+      border-color: #884c4d;
+    }
+  }
+  .td-sli{
+    width: 36px;
+    padding: 8px 4px;
+  }
+  td{
+    font-size: 14px;
+  }
+}
